2007-06-12 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Patch by Michael Ballbach to add support for CONFIG directive

2007-06-12 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Fixed minor lexer error with title and subtitle directive involving
  whitespace after parameter
  * [gpasm] Fixed errors on misuse of #define directive

2007-06-11 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Improved quote behavior on include, title, and subtitle directives
  and moved their logic into the parser grammar

2007-06-11 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Corrected behavior for include directive with quoted, braced, and
  unquoted parameter

2007-06-07 David Barnett <daviebdawg@gmail.com>
  * [gputils] Added support for sx48 and sx52
  * [gputils] Updated list of supported processors in gputils.lyx

2007-06-07 David Barnett <daviebdawg@gmail.com>
  * [gputils] Added support for p10f220 and p10f222

2007-06-07 David Barnett <daviebdawg@gmail.com>
  * [gputils] Added support for p16f610
  * [gputils] Added support for p16f882, p16f883, p16f884, p16f886, and p16f887
  * [gputils] Added support for p18f1230 and p18f1330
  * [gputils] Added support for p18f24j10, p18f25j10, p18f44j10, and p18f45j10

2007-06-06 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Corrected processor class and removed special-case
  missing instructions for p16f5x

2007-06-06 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Fixed erroneous page count on p16f88

2007-06-06 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Fixed missing warning for line ending in unpaired quote

2006-12-16 Scott Dattalo <scott@dattalo.com>
  * [gpasm] Patch from David Barnett to fix 'Duplicate Label' bug.

2006-08-19 Craig Franklin <craigfranklin@users.sourceforge.net>
  * gputils 0.13.4 Released.
  * [gputils] Updated header files and linker scripts.
  * {gputils] Fixed UPPER to mask with 0xff instead of 0x3f.
  * [gpasm] Mask MOVLB with 0xf instead of 0xff.